add links to CYCLONE HTML

--- a/Cyclone_Final.html
+++ b/Cyclone_Final.html
@@ -13,6 +13,22 @@
 
 <title>Cyclone_Final.knit</title>
 
+<center>
+<a href = "https://joeyhdz.shinyapps.io/Ames-Housing-App/?_ga=2.185711593.1513787878.1670416282-1021813642.1667347631">RShiny App</a> <br>
+
+
+<a href = "https://dotsumwedge.github.io/">Derek Rogers Github Page (Website)</a> <br>
+
+
+<a href = "https://github.com/DotSumWedge/">Derek Rogers Github Profile</a> <br>
+
+
+<a href = "https://github.com/joeyhdz">Joey Hernandez Github Pofile</a> <br>
+
+
+<a href = "https://joeyhdz.github.io/">Joey Hernandez Github Page (Website)</a> <br>
+</center>
+
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
 document.addEventListener('DOMContentLoaded', function(e) {
